feat: ensure 1 diet per user
